--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "shiftjs-template-template",
-  "version": "0.1.3",
-  "private": true,
+  "name": "blank",
+  "version": "0.0.1",
   "license": "MIT",
+  "keywords": [
+    "reshuffle",
+    "react",
+    "blank",
+    "start",
+    "fullstack"
+  ],
   "dependencies": {
-    "@binaris/shift-code-transform": "0.0.2",
-    "@binaris/shift-db": "^0.3.1",
-    "@binaris/shift-fetch-runtime": "0.0.4",
-    "@binaris/shift-local-proxy": "0.0.11",
-    "@binaris/shift-server-function": "0.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.1.1"
+    "@reshuffle/code-transform": "^0.0.3",
+    "@reshuffle/db": "^0.5.2",
+    "@reshuffle/fetch-runtime": "^0.0.5",
+    "@reshuffle/local-proxy": "^0.2.10",
+    "@reshuffle/server-function": "^0.0.6",
+    "bootstrap": "^4.3.1",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "cross-env EXTEND_ESLINT=true react-scripts start",
     "build": "cross-env EXTEND_ESLINT=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint backend && stylelint src/**/*.css"
+    "lint": "eslint backend --fix && eslint src --fix"
   },
   "browserslist": {
     "production": [
@@ -32,13 +43,22 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "devDependencies": {
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "cypress": "^3.4.1",
+    "prettier": "^1.18.2",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "singleQuote": true,
+    "jsxSingleQuote": true
   }
 }
