--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "fullstack"
   ],
   "dependencies": {
-    "@reshuffle/code-transform": "0.0.3",
-    "@reshuffle/db": "^0.5.3",
-    "@reshuffle/fetch-runtime": "0.0.5",
-    "@reshuffle/local-proxy": "^0.2.12",
-    "@reshuffle/server-function": "0.0.6",
+    "@reshuffle/code-transform": "^0.1.0",
+    "@reshuffle/db": "^0.5.4",
+    "@reshuffle/fetch-runtime": "^0.1.0",
+    "@reshuffle/local-proxy": "^0.3.1",
+    "@reshuffle/server-function": "^0.1.0",
     "bootstrap": "^4.3.1",
     "eslint": "^5.16.0",
     "eslint-config-react-app": "^5.0.2",
