--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   ],
   "dependencies": {
     "@reshuffle/auth": "0.0.1",
-    "@reshuffle/db": "^0.5.5",
+    "@reshuffle/db": "^0.5.6",
     "@reshuffle/fetch-runtime": "^0.1.0",
     "@reshuffle/passport": "^0.2.0",
     "@reshuffle/react-auth": "^0.1.7",
-    "@reshuffle/react-storage": "file:../reshuffle/common/temp/artifacts/packages/reshuffle-react-storage-0.0.0.tgz",
+    "@reshuffle/react-storage": "^0.1.0",
     "@reshuffle/server-function": "^0.2.2",
-    "@reshuffle/storage": "file:../reshuffle/common/temp/artifacts/packages/reshuffle-storage-0.0.0.tgz",
+    "@reshuffle/storage": "^0.1.0",
+    "clsx": "^1.0.4",
     "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-prettier": "^3.1.1",
     "express": "^4.17.1",
